@@ -26,13 +26,15 @@ AC_SUBST(LDFLAGS)
 GLIB_REQUIRED=2.12.0
 GTK_REQUIRED=2.10.0
 GCONF_REQUIRED=2.22.0
+GEE_REQUIRED=0.1.4
 
 PKG_CHECK_MODULES(WATRAY,
 	[glib-2.0 >= $GLIB_REQUIRED
 	gobject-2.0 >= $GLIB_REQUIRED
 	gmodule-2.0 >= $GLIB_REQUIRED
 	gtk+-2.0 >= $GTK_REQUIRED
-	gconf-2.0 >= $GCONF_REQUIRED])
+	gconf-2.0 >= $GCONF_REQUIRED
+	gee-1.0 >= $GEE_REQUIRED])
 
 AC_SUBST(WATRAY_CFLAGS)
 AC_SUBST(WATRAY_LIBS)
@@ -41,7 +43,8 @@ PKG_CHECK_MODULES(WATRAYSIMPLE,
 	[glib-2.0 >= $GLIB_REQUIRED
 	gobject-2.0 >= $GLIB_REQUIRED
 	gtk+-2.0 >= $GTK_REQUIRED
-	gconf-2.0 >= $GCONF_REQUIRED])
+	gconf-2.0 >= $GCONF_REQUIRED
+	gee-1.0 >= $GEE_REQUIRED])
 
 AC_SUBST(WATRAYSIMPLE_CFLAGS)
 AC_SUBST(WATRAYSIMPLE_LIBS)
